[gd_scene load_steps=15 format=2]

[ext_resource path="res://player.tscn" type="PackedScene" id=1]
[ext_resource path="res://fonts/mario_font.tres" type="DynamicFont" id=2]
[ext_resource path="res://Ground Enemy.tscn" type="PackedScene" id=3]
[ext_resource path="res://Ground Enemy 2.tscn" type="PackedScene" id=4]
[ext_resource path="res://mario_tiles.tres" type="TileSet" id=5]
[ext_resource path="res://Ground Enemy 4.tscn" type="PackedScene" id=6]
[ext_resource path="res://Flying Enemy.tscn" type="PackedScene" id=7]
[ext_resource path="res://Ground Enemy 3.tscn" type="PackedScene" id=8]
[ext_resource path="res://mario_tiles.gd" type="Script" id=9]
[ext_resource path="res://Mario-assets/Other/Overworld_mountain.png" type="Texture" id=10]
[ext_resource path="res://Mario-assets/Other/Overworld_sky.png" type="Texture" id=11]
[ext_resource path="res://StageOne.gd" type="Script" id=12]
[ext_resource path="res://Mario-assets/Blocks/NES - Super Mario Bros - Item and Brick Blocks (1).png" type="Texture" id=13]

[sub_resource type="RectangleShape2D" id=1]

[node name="StageOne" type="Node2D"]
script = ExtResource( 12 )
__meta__ = {
"_edit_vertical_guides_": [  ]
}

[node name="player" parent="." instance=ExtResource( 1 )]
position = Vector2( 9.08051, 162.59 )
scale = Vector2( 0.5, 0.5 )

[node name="Camera2D" type="Camera2D" parent="player"]
position = Vector2( 6, -150 )
current = true
zoom = Vector2( 1.5, 1.5 )
limit_left = 0
drag_margin_h_enabled = true
drag_margin_left = 1.0

[node name="HBoxContainer" type="HBoxContainer" parent="player"]
anchor_left = 0.5
anchor_top = 0.25
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 1.00097
margin_top = -317.0
margin_right = 401.001
margin_bottom = -281.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Score" type="VBoxContainer" parent="player/HBoxContainer"]
margin_right = 80.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="Score" type="Label" parent="player/HBoxContainer/Score"]
margin_right = 80.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Score"

[node name="Current_Score" type="Label" parent="player/HBoxContainer/Score"]
margin_top = 20.0
margin_right = 80.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )

[node name="Coins" type="VBoxContainer" parent="player/HBoxContainer"]
margin_left = 84.0
margin_right = 164.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="Coins" type="Label" parent="player/HBoxContainer/Coins"]
margin_right = 80.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Coins"

[node name="Current_Coins" type="Label" parent="player/HBoxContainer/Coins"]
margin_top = 20.0
margin_right = 80.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )

[node name="Lives" type="VBoxContainer" parent="player/HBoxContainer"]
margin_left = 168.0
margin_right = 248.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="Lives" type="Label" parent="player/HBoxContainer/Lives"]
margin_right = 80.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Lives"

[node name="Current_Lives" type="Label" parent="player/HBoxContainer/Lives"]
margin_top = 20.0
margin_right = 80.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )

[node name="World" type="VBoxContainer" parent="player/HBoxContainer"]
margin_left = 252.0
margin_right = 332.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="World" type="Label" parent="player/HBoxContainer/World"]
margin_right = 80.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "World"

[node name="Current_World" type="Label" parent="player/HBoxContainer/World"]
margin_top = 20.0
margin_right = 80.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )

[node name="Time" type="VBoxContainer" parent="player/HBoxContainer"]
margin_left = 336.0
margin_right = 400.0
margin_bottom = 36.0
size_flags_horizontal = 3

[node name="Time" type="Label" parent="player/HBoxContainer/Time"]
margin_right = 64.0
margin_bottom = 16.0
custom_fonts/font = ExtResource( 2 )
text = "Time"

[node name="Current_Time" type="Label" parent="player/HBoxContainer/Time"]
margin_top = 20.0
margin_right = 64.0
margin_bottom = 36.0
custom_fonts/font = ExtResource( 2 )

[node name="Ground Enemy" parent="." instance=ExtResource( 3 )]
position = Vector2( 92.436, 33.9265 )

[node name="mario_tiles" type="TileMap" parent="."]
tile_set = ExtResource( 5 )
cell_size = Vector2( 15, 15 )
cell_quadrant_size = 13
cell_custom_transform = Transform2D( 15, 0, 0, 15, 0, 0 )
format = 1
script = ExtResource( 9 )

[node name="Ground Enemy 2" parent="." instance=ExtResource( 4 )]
position = Vector2( 150.268, 183.971 )

[node name="Flying Enemy 2" parent="." instance=ExtResource( 7 )]
position = Vector2( 124.814, 93.9099 )

[node name="Ground Enemy 3" parent="." instance=ExtResource( 8 )]
position = Vector2( 141.584, 193.299 )

[node name="KinematicBody2D" parent="." instance=ExtResource( 6 )]
position = Vector2( 193.168, 112.473 )

[node name="Timer" type="Timer" parent="."]
autostart = true

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
motion_mirroring = Vector2( 768, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground/ParallaxLayer"]
texture = ExtResource( 10 )
centered = false
offset = Vector2( 0, 37 )

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( -10, 168 )
texture = ExtResource( 13 )
region_enabled = true
region_rect = Rect2( 272, 112, 13, 16 )

[node name="StaticBody2D7" type="StaticBody2D" parent="Sprite"]
position = Vector2( -2, -64 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/StaticBody2D7"]
shape = SubResource( 1 )

[node name="StaticBody2D6" type="StaticBody2D" parent="Sprite"]
position = Vector2( -2, -48 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/StaticBody2D6"]
shape = SubResource( 1 )

[node name="StaticBody2D4" type="StaticBody2D" parent="Sprite"]
position = Vector2( -2, -16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/StaticBody2D4"]
shape = SubResource( 1 )

[node name="StaticBody2D5" type="StaticBody2D" parent="Sprite"]
position = Vector2( -2, -32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/StaticBody2D5"]
shape = SubResource( 1 )

[node name="StaticBody2D3" type="StaticBody2D" parent="Sprite"]
position = Vector2( -2, 32 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/StaticBody2D3"]
shape = SubResource( 1 )

[node name="StaticBody2D2" type="StaticBody2D" parent="Sprite"]
position = Vector2( -2, 16 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/StaticBody2D2"]
shape = SubResource( 1 )

[node name="StaticBody2D" type="StaticBody2D" parent="Sprite"]
position = Vector2( -2, 0 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/StaticBody2D"]
shape = SubResource( 1 )

[node name="StaticBody2D8" type="StaticBody2D" parent="Sprite"]
position = Vector2( -2, -80 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Sprite/StaticBody2D8"]
shape = SubResource( 1 )

[node name="ParallaxBackground2" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground2"]
motion_mirroring = Vector2( 768, 0 )

[node name="Sprite" type="Sprite" parent="ParallaxBackground2/ParallaxLayer"]
texture = ExtResource( 11 )
centered = false
offset = Vector2( 0, -125 )
[connection signal="tree_exited" from="." to="." method="_on_StageOne_tree_exited"]
